<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.marcinwroblewski.aplikacja_dzieci.Menus.GamesMenu"
    android:background="@drawable/games_menu_background"
    >


    <include
        android:id="@id/action_bar"
        layout="@layout/fake_action_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/action_bar_height">

    <RelativeLayout
        android:id="@+id/app_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar"
        android:padding="@dimen/app_container_padding">

            <TextView
                android:id="@+id/button_speech_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/app_margin"
                android:background="@drawable/small_bg_vowel"

                android:text="@string/speech"
                android:textColor="@color/white"
                android:textSize="@dimen/defalut_text_size"
                android:gravity="center"

                android:clickable="true"
                android:onClick="sendTo"/>


            <TextView
                android:id="@+id/button_motility_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/button_speech_apps"
                android:layout_marginTop="@dimen/app_margin"
                android:background="@drawable/small_bg_graf"

                android:text="@string/graf_motility"
                android:textColor="@color/white"
                android:textSize="@dimen/defalut_text_size"
                android:gravity="center"

                android:clickable="true"
                android:onClick="sendTo"/>

            <TextView
                android:id="@+id/button_sequence_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/button_motility_apps"
                android:layout_marginTop="@dimen/app_margin"
                android:background="@drawable/small_bg_sequence"

                android:text="@string/sequence"
                android:textColor="@color/white"
                android:textSize="@dimen/defalut_text_size"
                android:gravity="center"

                android:clickable="true"
                android:onClick="sendTo"/>

            <TextView
                android:id="@+id/button_serial_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/button_sequence_apps"
                android:layout_marginTop="@dimen/app_margin"
                android:background="@drawable/small_bg_serial"

                android:text="@string/serial"
                android:textColor="@color/white"
                android:textSize="@dimen/defalut_text_size"
                android:gravity="center"

                android:clickable="true"
                android:onClick="sendTo"/>
    </RelativeLayout>

</ScrollView>

</RelativeLayout>
